--- a/jira_cli/Cargo.toml
+++ b/jira_cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "jira_cli"
+name = "my-jira"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,7 +11,7 @@ serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ellipse = "0.2.0"
 itertools = "0.10.3"
-
+clearscreen = "1.0.10"
 
 [dev-dependencies]
 tempfile = "3.3.0"
