--- a/programs/Cargo.toml
+++ b/programs/Cargo.toml
@@ -11,3 +11,6 @@ serde_json = "1.0"
 serde_derive = "1.0"
 tokio = { version = "1", features = ["full"] }
 reqwest = "0.12.4"
+hmac = "0.12"
+sha2 = "0.10"
+hex = "0.4"
